estructura SCRUD terminada en duplas(buscar, eliminar, crear, editar, vidualizar,) solo falta termnar los fitros de busqueda

--- a/views/admin/empleados.html
+++ b/views/admin/empleados.html
@@ -28,13 +28,13 @@
             </div>
         </div>
 
-        <!-- Formulario de búsqueda -->
+        <!-- ? Formulario de búsqueda -->
         <div class="row">
             <form class="col-sm-12 col-md-12 col-lg-10" id="searchForm">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12 mt-5">
                         <input type="search" class="form-control custom-input border-2" id="search" name="search"
-                            placeholder="Nombre o Apellido" required>
+                            placeholder="Buscador..." required>
                     </div>
                     <div class="col-lg-5 col-md-9 col-sm-9 d-flex flex-row align-items-center gap-2 mt-5">
                         <div class="btn-group">
