--- a/views/admin/duplas.html
+++ b/views/admin/duplas.html
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12 mt-5">
                         <input type="search" class="form-control custom-input border-2" id="search" name="search"
-                            placeholder="Nombre o Apellido" required>
+                            placeholder="Nombre o teléfono" required>
                     </div>
                     <div class="col-lg-5 col-md-9 col-sm-9 d-flex flex-row align-items-center gap-2 mt-5">
                         <div class="btn-group">
@@ -144,8 +144,8 @@
                                         placeholder="Ingrese un nombre..." required>
                                     <label for="telefonoDupla" class="form-label">Teléfono de dupla</label>
                                     <input type="text" class="form-control" id="telefonoDupla" name="telefonoDupla"
-                                        placeholder="Ingrese un numero valido..." 
-                                        oninput="formatPhoneNumber(this)" required>
+                                        placeholder="Ingrese un numero valido..." oninput="formatPhoneNumber(this)"
+                                        required>
                                 </div>
                             </div>
                             <div class="row d-flex justify-content-center align-items-center">
@@ -155,10 +155,10 @@
                                     <div id="infoEmpleado1">
                                         <img src="../../resources/images/error/404Empleado.png" width="200px"
                                             height="200px" class="rounded mx-auto d-block" alt="">
-                                        <input type="number" class="d-none" id="idEmpleado1" name="idEmpleado1">
+                                        <!-- <input type="number" class="d-none" id="idEmpleado1" name="idEmpleado1"> -->
                                         <h5 class="text-white mt-2">Nombre empleado</h5>
-                                        <p class="card-title text-white">${row.nombre_empleado}</p>
-                                        <p class="card-title text-white">${row.apellido_empleado}</p>
+                                        <p class="card-title text-white"></p>
+                                        <p class="card-title text-white"></p>
                                         <h5 class="text-white">Estado empleado</h5>
                                         <p class="card-text text-white">Estado: <i class="${icon} text-white"></i></p>
                                     </div>
@@ -177,12 +177,12 @@
                                     <div id="infoEmpleado2">
                                         <img src="../../resources/images/error/404Empleado.png" width="200px"
                                             height="200px" class="rounded mx-auto d-block" alt="">
-                                        <input type="number" class="d-none" id="idEmpleado2" name="idEmpleado2">
+                                        <!-- <input type="number" class="d-none" id="idEmpleado2" name="idEmpleado2"> -->
                                         <h5 class="text-white mt-2">Nombre empleado</h5>
-                                        <p class="card-title text-white">${row.nombre_empleado}</p>
-                                        <p class="card-title text-white">${row.apellido_empleado}</p>
-                                        <h5 class="text-white">Correo Empleado</h5>
-                                        <p class="card-text text-white">${row.correo_empleado}</p>
+                                        <p class="card-title text-white"></p>
+                                        <p class="card-title text-white"></p>
+                                        <h5 class="text-white">Estado empleado</h5>
+                                        <p class="card-text text-white">Estado: <i class="${icon} text-white"></i></p>
                                     </div>
                                     <div class="row d-flex justify-content-center align-items-center mb-3">
                                         <div class="col-6">
