inicio session empleado (public)

--- a/views/public/plantilla.html
+++ b/views/public/plantilla.html
@@ -13,8 +13,8 @@
 <body>
     <!-- Contenido principal del documento -->
     <main>
-        <h2 id="mainTitle">inicio</h2>
-        <button type="button" class="btn btn-success" onclick="getLocation()">cargar ubicación actual</button>
+        <h2 id="mainTitle"></h2>
+
     </main>
 
     <!-- IMPORTACIÓN DE ARCHIVOS JAVASCRIPT -->
@@ -29,7 +29,6 @@
     <script src="../../controllers/utils/inputValidator.js"></script>
     <!-- Llamada al controlador de la página web -->
     <!-- ! cambiar el link js para el controntrolador -->
-    <script src="../../controllers/public/inicio.js"></script>
 
 </body>
 
