información personal empleados terminado (falta información laboral)

--- a/views/admin/info_empleados.html
+++ b/views/admin/info_empleados.html
@@ -20,8 +20,7 @@
         <!-- titulo principal -->
         <div class="container-fluid">
             <div class="row py-4">
-                <h3 class="fw-bold "> <i class="bi bi-person-vcard-fill me-1"></i> Administrar datos personales
-                    empleados</h3>
+                <h3 class="fw-bold "> <i class="bi bi-person-vcard-fill me-1"></i> Administrar información laboral de empleados</h3>
                 <h6 class="fw-medium text-secondary">Bienvenido a la sección de gestión de empleados. Aquí puedes
                     manejar todos los trabajadores registrados en tu página web. <br>
                     La tabla te permite eliminar, dar de baja, editar, ver graficas y
@@ -29,11 +28,6 @@
             </div>
         </div>
         <h3 class="fw-bold "> </h3>
-        <!-- <button type="button" class=" btn btn-dark"><i class="bi bi-person-vcard-fill me-1"></i>Información laboral
-            empleados</button> -->
-        <button type="button" class="btn btn-dark fs-3" onclick="window.location.href='../admin/info_empleados.html'">
-            <i class="bi bi-person-vcard-fill me-1"></i>Información laboral empleados
-        </button>
         <!-- ? Formulario de búsqueda -->
         <div class="row">
             <form class="col-sm-12 col-md-12 col-lg-10" id="searchForm">
@@ -205,7 +199,7 @@
 
                                 <!-- Inputs -->
                                 <div class="row d-flex justify-content-center align-items-center">
-                                    <div class="col-12 text-center">
+                                    <!-- <div class="col-12 text-center">
                                         <label for="imagenEmpleado">
                                             <h3 for="imagenEmpleado" class="form-label">Imagen
                                                 Empleado</h3>
@@ -236,8 +230,36 @@
                                         <label class="form-label">Numero teléfono</label>
                                         <input id="telefonoEmpleado" name="telefonoEmpleado" class="form-control"
                                             autocomplete="off" required oninput="formatPhoneNumber(this)">
+                                    </div> -->
+                                    <div class="col-6">
+                                        <label class="form-label">Departamento</label>
+                                        <select id="departamentoEmpleado" name="departamentoEmpleado"
+                                            class="form-control" autocomplete="off" onchange="actualizarMunicipios()">
+                                            <option value="">Seleccionar Departamento</option>
+                                            <option value="Ahuachapan">Ahuachapán</option>
+                                            <option value="Cabañas">Cabañas</option>
+                                            <option value="Chalatenango">Chalatenango</option>
+                                            <option value="La Libertad">La Libertad</option>
+                                            <option value="La Paz">La Paz</option>
+                                            <option value="San Salvador">San Salvador</option>
+                                            <option value="San Vicente">San Vicente</option>
+                                            <option value="Santa Ana">Santa Ana</option>
+                                            <option value="Sonsonate">Sonsonate</option>
+                                            <option value="Usulután">Usulután</option>
+                                            <option value="Morazán">Morazán</option>
+                                            <option value="La Unión">La Unión</option>
+                                            <option value="San Miguel">San Miguel</option>
+                                            <option value="Tecapa">Tecapa</option>
+                                        </select>
                                     </div>
-                                    <div class="col-12 ">
+                                    <div class="col-6">
+                                        <label class="form-label">Municipio</label>
+                                        <select id="municipioEmpleado" name="municipioEmpleado" class="form-control"
+                                            autocomplete="off">
+                                            <option value="">Primero seleccione un departamento</option>
+                                        </select>
+                                    </div>
+                                    <!-- <div class="col-12 ">
                                         <label class="form-label">Correo electrónico</label>
                                         <input id="correoEmpleado" name="correoEmpleado" class="form-control"
                                             autocomplete="off" required oninput="formatEmail(this)">
@@ -254,6 +276,17 @@
                                             <input type="password" id="claveEmpleado2" name="claveEmpleado2"
                                                 autocomplete="off" class="form-control" required
                                                 oninput="formatPassword(this)">
+                                        </div>
+                                    </div> -->
+                                    <div id="estadoContenido">
+                                        <h3 class=" mt-5 text-center form-label">Estado
+                                            Empleado</h3>
+                                        <div class="col-lg-12 d-flex justify-content-center">
+                                            <div class="form-check form-switch">
+                                                <input class="form-check-input" type="checkbox" id="estadoEmpleado"
+                                                    name="estadoEmpleado" checked>
+                                                <label class="form-check-label" for="estadoEmpleado">Estado</label>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -284,7 +317,7 @@
     <script src="../../controllers/utils/inputValidator.js"></script>
     <!-- Llamada al controlador de la página web -->
     <!-- ! cambiar el link js para el controntrolador -->
-    <script src="../../controllers/admin/empleados.js"></script>
+    <script src="../../controllers/admin/info_empleados.js"></script>
 </body>
 
 </html>
