--- a/views/public/inicio.html
+++ b/views/public/inicio.html
@@ -13,8 +13,14 @@
 <body>
     <!-- Contenido principal del documento -->
     <main>
-        <h2 id="mainTitle">inicio</h2>
-        <button type="button" class="btn btn-success" onclick="getLocation()">cargar ubicación actual</button>
+        <h1 id="mainTitle"></h1>
+        <div class="text-center">
+            <h2>Jornada laboral diaria</h2>
+            <h4>Horas-Minutos-Segundos</h4>
+            <h3>00:00:00</h3>
+
+            <button type="button" class="btn btn-primary">guardar hora actual</button>
+        </div>
     </main>
 
     <!-- IMPORTACIÓN DE ARCHIVOS JAVASCRIPT -->
